<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateAccount">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_new_account"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_information_account"
        android:layout_width="219dp"
        android:layout_height="36dp"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/information_account"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_create_account"
        tools:ignore="TextSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_whats_your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/whats_your_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_information_account" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/type_your_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textColor="@color/text_second"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_whats_your_name"
        tools:ignore="VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_whats_your_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/whats_your_email"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/text_whats_your_name"
        app:layout_constraintTop_toBottomOf="@id/edit_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/Type_your_email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textColor="@color/text_second"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/edit_name"
        app:layout_constraintStart_toStartOf="@id/edit_name"
        app:layout_constraintTop_toBottomOf="@id/text_whats_your_email"
        tools:ignore="VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_whats_your_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/whats_your_password"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/text_whats_your_email"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/type_your_password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textColor="@color/text_second"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="@id/edit_email"
        app:layout_constraintTop_toBottomOf="@id/text_whats_your_password"
        tools:ignore="VisualLintTextFieldSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/edit_Password"
        android:background="@drawable/background_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="85dp"
        android:layout_height="15dp"
        android:text=""/>
</androidx.constraintlayout.widget.ConstraintLayout>