<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.ForgotPasswordActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_logo"
        android:layout_width="238dp"
        android:layout_height="100dp"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_forgot_password"
        android:layout_width="224dp"
        android:layout_height="30dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/black_opacity_80"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_recover_your_password"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/recover_your_password"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_forgot_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_whats_your_email"
        app:layout_constraintTop_toBottomOf="@id/text_recover_your_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="84dp"
        android:layout_marginStart="48dp"
        android:text="@string/whats_your_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_email"
        android:layout_width="326dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edit_text_forgot_password"
        android:elevation="6dp"
        android:hint="@string/Type_your_email"
        android:inputType="textPersonName"
        android:textSize="12sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/text_whats_your_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        tools:ignore="RtlSymmetry" />


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:layout_margin="32dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:elevation="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>